--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -12,14 +12,15 @@
     <div class="home">
         <header>
             <h1>
-                <a href="/">Home</a>
+                <a href="/">MVC Tech Blog</a>
             </h1>
             <nav>
+                <span><a href="/">home</a></span> 
                 {{#if loggedIn}}
-                <a href="/">Dashboard</a>
+                <a href="/dashboard">Dashboard</a>
                 <button id="logout" class="btn-no-style logout">Logout</button>
                 {{else}}
-                <a href="/">Login</a>
+                <a href="/login">Login</a>
                 {{/if}}
             </nav>
         </header>
@@ -27,7 +28,7 @@
         {{{ body }}}
     </main>
     <footer>
-        Welcome to Tech Blog image.png
+        Welcome to Tech Blog
     </footer>
     </div>
 
