--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,14 @@
-* {
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Height of the footer */
+    background-color: #f5f5f5;
+  }
+  
+
+/* * {
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
@@ -66,4 +76,4 @@ margin-top:20px;
 
 #title, #editedTitle {
     width: 80vw;
-} */
+} */ 
