--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,10 +1,10 @@
 
 {{#each posts as |post| }}
-<div class="row mb-4 project">
+<div class="row mb-4 blog">
   <div class="col-md-5">
     <h2>
       
-      <a href="/project/{{post.id}}">{{post.title}}</a>
+      <a href="/post/{{post.id}}">{{post.title}}</a>
     </h2>
     <p>Created by {{post.user.username}} on {{format_date post.created_at}}</p>
   </div>
