--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -25,7 +25,7 @@
 </article>
 
 {{> comments post.comments}}
+<script src="/js/edit-post.js"></script>
+<script src="/js/comment.js"></script>
+<script src="/js/delete-post.js"></script>
 
-<script src="/javascript/edit-post.js"></script>
-<script src="/javascript/delete-post.js"></script>
-<script src="/javascript/comment.js"></script>
