--- a/views/add-post.handlebars
+++ b/views/add-post.handlebars
@@ -1,22 +1,56 @@
-<div class="new-post"></div>
-<section>
-    <div class="row mb-4 project">
-        <div class="col-md-5">
-            <h2>Create New Post</h2>
+
+<a href="/dashboard" class="go-back">Back to dashboard</a>
+
+<article class="new-page">
+    <section class="new-form-page">
+        <div class="form-heading">
+            <h2>Create New Blog Post</h2>
         </div>
+        <div class="form-section">
+            <form class="new-post-form">
+                <div class="post-title-section">
+                    <label for="post-title">Title</label>
+                    <input type="text" id="post-title" name="post-title" />
+                </div>
+                <div class="post-content">
+                    <label for="post-content">Content</label>
+                    <textarea class="entry-field" id="post-content" name="post-content"></textarea>
+                </div>
+                <button type="submit" class="btn">Create</button>
+            </form>
+        </div>
+    </section>
+</article>
+
+<script src="/js/add-post.js"></script>
+
+
+
+
+
+
+{{!-- <div class="row mb-4 project">
+  <div class="col-md-5">
+    <h1>Create New Post</h1>
+  </div>
+</div>
+
+<div class="form-section">
+  <form class="new-post-form">
+    <div class="post-title-section">
+      <label for="post-title">Title</label>
+      <input type="text" id="post-title" name="post-title" />
     </div>
 
-    <div class="row mb-4 project">
-        <form action="/api/posts" method="POST">
-            <div class="col-md-5">
 
-                <label for="title">{{post.title}}</label>
-                <input type="text" id="title" name="post-title" />
-
-                <label for="content">{{post.content}}</label>
-                <textarea id="content" name="post-content"></textarea>
-                <button type="create-post">Create</button>
-            </div>
-        </form>
+    <div class="post-content">
+      <label for="post-content">Content</label>
+      <textarea class="entry-field" id="post-content" name="post-content"></textarea>
     </div>
-</section>
+    <button type="submit" class="btn">Create</button>
+  </form>
+</div>
+
+<script src="/js/add-post.js"></script> --}}
+
+
