--- a/views/post.handlebars
+++ b/views/post.handlebars
@@ -1,3 +1,7 @@
+<a href="/dashboard" class="go-back">Back to dashboard</a>
+<br>
+<br>
+
 {{> post-info post}}
 
 {{#if loggedIn}}
@@ -16,5 +20,5 @@
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src="/js/comment.js"></script>
-{{/if}}
+<script src="/js/add-comment.js"></script>
+{{/if}} 
