--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,16 +1,16 @@
 <article>
-    <a href="/dashboard">← Back to Dashboard</a>
+    <a href="/dashboard">Back to Dashboard</a>
+  <form class="edit-post-form">
     <h2>Edit Post</h2>
    
    <div>
-        <label for="post-title">post title:</label>
+        <label form="post-title">Post Title:</label>
       <input class="input" name="post-title" type="text" value="{{post.title}}" />
     </div>
     <div>
-        <label for="post-content">post content:</label>
-        <inpu class="textarea" name="post-content" type="text" value="{{post.post_content}}" />
+        <label for="post-content">Post Content:</label>
+        <textarea class="entry-field" id="post-content" name="post-content">{{post.content}}</textarea>
     </div>
-    
 
     <div class="row mb-4 project">
         <div class="col-md-5">
@@ -19,13 +19,15 @@
 
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
     </div>
+
     <button type="submit" class="button-success">Save Post</button>
     <button type="button" class="delete-post-btn">Delete Post</button>
   </form>
 </article>
 
 {{> comments post.comments}}
+
+
 <script src="/js/edit-post.js"></script>
 <script src="/js/comment.js"></script>
 <script src="/js/delete-post.js"></script>
-
