--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,7 @@
 <div class="card">
-  <h5 class="card-title"><a class="text-info" href="/post{{post_id}}">{{title}}</a>title</h5>
+  <h5 class="card-title"><a class="text-info" href="/post{{post_id}}">{{title}}</a></h5>
   <div class="card-body">
-    <p class="card-text">{{content}}With supporting text below as a natural lead-in to additional content.</p>
-    <a href="#" class="btn btn-primary">Go somewhere</a>
+    <p class="card-text">{{content}}</p>
+    <a href="#" class="btn btn-primary">Button</a>
   </div>
 </div>
