--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -1,8 +1,8 @@
-<a href="/dashboard" class="go-back">Back to dashboard</a>
+{{!-- <a href="/dashboard" class="go-back">Back to dashboard</a>
 <br>
-<br>
+<br> --}}
 
-{{> post-info post}}
+ {{> post-info post}}
 
 {{#if loggedIn}}
 <form class="comment-form">
@@ -21,4 +21,4 @@
 
 {{#if loggedIn}}
 <script src="/js/add-comment.js"></script>
-{{/if}} 
+{{/if}}  
