--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,10 +1,10 @@
-
-<a href="/dashboard" class="go-back">Back to dashboard</a>
+{{!-- 
+<a href="/dashboard" class="go-back">Back to dashboard</a> --}}
 
 <article class="new-page">
     <section class="new-form-page">
         <div class="form-heading">
-            <h2>Create New Blog Post</h2>
+            <h2>Create New Post</h2>
         </div>
         <div class="form-section">
             <form class="new-post-form">
