--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,33 +1,34 @@
-<article>
-    <a href="/dashboard">Back to Dashboard</a>
+{{!-- <article>
+    <a href="/dashboard">Back to Dashboard</a> --}}
+
+
+
   <form class="edit-post-form">
     <h2>Edit Post</h2>
-   
    <div>
         <label form="post-title">Post Title:</label>
-      <input class="input" name="post-title" type="text" value="{{post.title}}" />
+      <input class="input" name="post-title" type="text" placeholder="{{post.title}}"/>
     </div>
     <div>
         <label for="post-content">Post Content:</label>
         <textarea class="entry-field" id="post-content" name="post-content">{{post.content}}</textarea>
     </div>
-
+{{!-- 
     <div class="row mb-4 project">
         <div class="col-md-5">
        created on {{format_date post.created_at}}
     </div>
 
       <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
-    </div>
+    </div> --}}
 
-    <button type="submit" class="button-success">Save Post</button>
+    <button type="submit" class="button-success">Update Post</button>
     <button type="button" class="delete-post-btn">Delete Post</button>
   </form>
 </article>
-
-{{> comments post.comments}}
+{{!-- 
+{{> comments post.comments}} --}}
 
 
 <script src="/js/edit-post.js"></script>
-<script src="/js/comment.js"></script>
 <script src="/js/delete-post.js"></script>
