--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -28,7 +28,7 @@
 
                 {{#if loggedIn}}
 
-                <a type="button" class="btn btn-secondary btn-md" href="/dashboard">Dashboard</a>
+                <a type="button" class="btn btn-secondary btn-md" href="/dashboard/">Dashboard</a>
 
 
                  <a type="button" class="btn btn-secondary btn-md" id="logout">Logout</a>
