--- a/views/partials/post-info.handlebars
+++ b/views/partials/post-info.handlebars
@@ -1,7 +1,3 @@
 <div class="card">
-  <h5 class="card-title"><a class="text-info" href="/post{{post_id}}">{{title}}</a></h5>
-  <div class="card-body">
-    <p class="card-text">{{content}}</p>
-    <a href="#" class="btn btn-primary">Button</a>
-  </div>
+  <h5 class="card-title"><a class="text-info" href="/dashboard/edit/{{post.id}}">{{title}}</a></h5>
 </div>
