--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,20 +1,20 @@
-
-
-
-{{#each posts as |post| }}
-
-<div class="row mb-4 blog">
-  <div class="col-md-5">
-    <h2>
-
-      <a href="/post/{{post.id}}">{{post.title}}</a>
-    </h2>
-    <p>Created by {{post.user.username}} on {{format_date post.created_at}}</p>
+<div class="row">
+  {{#each posts as |post| }}
+  <div class="col-sm-6 mb-3 mb-sm-0">
+    <div class="card">
+      <div class="card-body">
+        <h2 class="card-title">
+          <a href="/post/{{post.id}}">{{post.title}}</a>
+        </h2>
+        <p class="fw-bold">Created by {{post.user.username}} on {{format_date post.created_at}}</p>
+        <p class="card-text">
+          {{post.post_content}}
+        </p>
+      </div>
+    </div>
+    <br>
   </div>
-  <div class="col-md-7">
-    <p>
-      {{post.post_content}}
-    </p>
-  </div>
+
+  {{/each}}
+  <br>
 </div>
-{{/each}}
