fixed create post bug

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -38,5 +38,5 @@
 {{/if}}
 
 <br>
-<button type="submit" class="btn btn-secondary btn-md" id="new-post"><a href="/dashboard/new">Add New Post</a></button>
+<a type="submit" class="btn btn-secondary btn-md" id="new-post" href="/dashboard/new">Add New Post</a>
 
