--- a/views/create-post.handlebars
+++ b/views/create-post.handlebars
@@ -1,28 +1,34 @@
-{{!-- 
-<a href="/dashboard" class="go-back">Back to dashboard</a> --}}
+ <a href="/dashboard" class="btn btn-secondary btn-md">Back to dashboard</a> 
 
-<article class="new-page">
-    <section class="new-form-page">
-        <div class="form-heading">
-            <h2>Create New Post</h2>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-md-8">
+      <div class="card">
+        <div class="card-header">
+          <h4>Create New Post</h4>
         </div>
-        <div class="form-section">
-            <form class="new-post-form">
-                <div class="post-title-section">
-                    <label for="post-title">Title</label>
-                    <input type="text" id="post-title" name="post-title" />
-                </div>
-                <div class="post-content">
-                    <label for="post-content">Content</label>
-                    <textarea class="entry-field" id="post-content" name="post-content"></textarea>
-                </div>
-                <button type="submit" class="btn">Create</button>
-            </form>
+        <div class="card-body">
+          <form>
+            <div class="form-group">
+              <label for="title"></label>
+              <input type="text" class="form-control" id="title" aria-describedby="titleHelp" placeholder="Enter title">
+            <div class="form-group">
+              <label for="textEntry"></label>
+              <textarea class="form-control" id="textEntry" rows="3" placeholder="Enter content"></textarea>
+            </div>
+            <a type="submit" class="btn btn-secondary btn-md" href="">Create</a>
+          </form>
         </div>
-    </section>
-</article>
+      </div>
+    </div>
+  </div>
+</div>
 
 <script src="/js/add-post.js"></script>
+
+
+
+
 
 
 
