--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,13 +14,19 @@
 </head>
 
 <body class="bg-light">
-
-
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <style>
+        .bg-dark {
+            background-color: #C69B7B !important;
+        }
+       </style>
+        
         <div class="container-fluid">
             <a class="navbar-brand" href="/">
                 <h1>One Stop Devs</h1>
             </a>
+
+
             <header>
                 <h5>Welcome to the blog!</h5>
                 <style>
@@ -46,6 +52,12 @@
 
                 <a type="button" class="btn btn-secondary btn-md" href="/signup">SignUp</a>
                 {{/if}}
+
+                <style>
+                    .btn-md {
+                        background-color: #826F66
+                    }
+                </style>
             </nav>
 
         </div>
@@ -61,8 +73,8 @@
         </div>
         <style>
             .card {
-            margin-left: 50px;
-            margin-right: 50px;
+                margin-left: 50px;
+                margin-right: 50px;
             }
         </style>
     </main>
