--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -7,28 +7,20 @@
     <h2>Edit Post</h2>
    <div>
         <label form="post-title">Post Title:</label>
-      <input class="input" name="post-title" type="text" placeholder="{{post.title}}"/>
+      <input type="text" value="{{post.title}}" name="post-title" id="title">
     </div>
     <div>
         <label for="post-content">Post Content:</label>
-        <textarea class="entry-field" id="post-content" name="post-content">{{post.content}}</textarea>
-    </div>
-{{!-- 
-    <div class="row mb-4 project">
-        <div class="col-md-5">
-       created on {{format_date post.created_at}}
+        <textarea name="content" id="post-content">{{post.content}}  </textarea>
     </div>
 
-      <a href="/post/{{post.id}}">{{post.comments.length}} {{format_plural "comment" post.comments.length}}</a>
-    </div> --}}
 
-    <button type="submit" class="button-success">Update Post</button>
-    <button type="button" class="delete-post-btn">Delete Post</button>
-  </form>
-</article>
-{{!-- 
-{{> comments post.comments}} --}}
 
+    <button type="submit" class="btn btn-secondary btn-md">Update Post</button>
+    <button type="button" class="btn btn-secondary btn-md">Delete Post</button>
+    </form>
+    </article>
+  
 
 <script src="/js/edit-post.js"></script>
 <script src="/js/delete-post.js"></script>
