--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,5 +1,5 @@
-{{!-- <article>
-    <a href="/dashboard">Back to Dashboard</a> --}}
+<article>
+    <a href="/dashboard">Back to Dashboard</a>
 
 
 
@@ -23,4 +23,4 @@
   
 
 <script src="/js/edit-post.js"></script>
-<script src="/js/delete-post.js"></script>
+{{!-- <script src="/js/delete-post.js"></script> --}}
