--- a/views/partials/comments.handlebars
+++ b/views/partials/comments.handlebars
@@ -1,12 +1,10 @@
-<div class="comments">
+
     {{#each this}}
-    <section class="comment">
-        <div class="meta">
-            {{user.username}} on {{format_date created_at}}
-        </div>
-        <div class="text">
+    <br>
+    <section class="card">
+            {{user.username}} on {{format_date created_at}}:
+        <div class="text small">
             {{comment_text}}
         </div>
     </section>
     {{/each}}
-</div>
