--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -12,7 +12,7 @@
         <input class="form-input" type="password" id="password" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="login-form">login</button>
+        <button href="/dashboard" class="btn btn-primary" type="login-form">login</button>
       </div>
     </form>
   </div>
