--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,7 @@
         <input class="form-input" type="password" id="password" />
       </div>
       <div class="form-group">
-        <button class="btn btn-primary" type="submit-form">signup</button>
+        <a href="/" class="btn btn-primary" type="submit-form">sign up</a>
       </div>
     </form>
   </div>
