--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,10 +13,9 @@
         <input class="form-input" type="password" id="password" />
       </div>
       <div class="form-group">
-        <a href="/" class="btn btn-primary" type="submit-form">sign up</a>
+        <a href="/dashboard" class="btn btn-primary" type="submit-form">sign up</a>
       </div>
     </form>
   </div>
 </div>
-
 <script src="./js/signup.js"></script>
