--- a/views/edit-post.handlebars
+++ b/views/edit-post.handlebars
@@ -1,22 +1,52 @@
-<article>
-<h2>Edit Post</h2>
-  <form class="edit-post-form">
-    <div>
-      <label form="post-title">Post Title:</label>
-      <input type="text" value="{{post.title}}" name="post-title" id="title">
-    </div>
-    <div>
-      <label for="post-text">Post Content:</label>
-      <textarea name="content" id="post-content">{{post.content}} </textarea>
-    </div>
+{{!--edit post handlebar--}}
 
 
-    <button type="submit" class="btn btn-secondary btn-md">Update Post</button>
-    <button type="button" class="btn btn-secondary btn-md">Delete Post</button>
-  </form>
-</article>
+  <div class="edit-post-form">
+    <h2>Edit Post</h2>
+    <form class="edit-post-form">
+      <div>
+        <label for="post-title">Post Title:</label>
+        <input class="input" name="post-title" type="text" value="{{post.title}}"/>
+      </div>
+      <div>
+        <label for="post-text">Post Content:</label>
+        <textarea name="post-text" id="post-text">{{post.post_text}} </textarea>
+      </div>
+
+      <button type="submit" class="btn btn-secondary btn-md">Update Post</button>
+      <button type="button" class="btn btn-secondary btn-md">Delete Post</button>
+    </form>
+  </div>
 
 
-<script src="/js/edit-post.js"></script>
+  <script src="/js/edit-post.js"></script>
+  <script src="/js/delete-post.js"></script>
 
-<script src="/js/delete-post.js"></script>
+
+
+
+
+
+{{!-- 
+ <div class="edit-post-container">
+  <div class="edit-post-form">
+    <h2>Edit Post</h2>
+    <form class="edit-post-form">
+      <div>
+
+        <label for="post-title">Post Title:</label>
+        <input class="input" name="post-title" type="text" value="{{post.title}}"/>
+      </div>
+      <div>
+        <label for="post-text">Post Content:</label>
+        <textarea name="post-text" id="post-text">{{post.post_text}} </textarea>
+      </div>
+
+      <button type="submit" class="btn btn-secondary btn-md">Update Post</button>
+      <button type="button" class="btn btn-secondary btn-md">Delete Post</button>
+    </form>
+  </div>
+
+
+  <script src="/js/edit-post.js"></script>
+  <script src="/js/delete-post.js"></script> --}}
