--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,12 +4,12 @@
 
     <form class="form login-form">
       <div class="form-group">
-        <label for="username">Username:</label>
-        <input class="form-input" type="text" id="username" />
+        <label for="username">
+        <input placeholder="username" class="form-input" type="text" id="username" />
       </div>
       <div class="form-group">
-        <label for="password">password:</label>
-        <input class="form-input" type="password" id="password" />
+        <label for="password">
+        <input placeholder="passwrod" class="form-input" type="password" id="password" />
       </div>
       <div class="form-group">
         <button href="/" class="btn btn-primary" type="login-form">login</button>
