--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -5,12 +5,12 @@
 
     <form class="form signup-form">
       <div class="form-group">
-        <label for="username">Username:</label>
-        <input class="form-input" type="text" id="username" />
+        <label for="username">
+        <input placeholder="username" class="form-input" type="text" id="username" />
       </div>
       <div class="form-group">
-        <label for="password">password:</label>
-        <input class="form-input" type="password" id="password" />
+        <label for="password">
+        <input placeholder="password" class="form-input" type="password" id="password" />
       </div>
       <div class="form-group">
         <a href="/dashboard" class="btn btn-primary" type="submit-form">sign up</a>
