--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -3,7 +3,7 @@
   <div class="col-md-6">
     <h2>Signup</h2>
 
-    <form class="form signup-form">
+    <form class="form signup-form" id="signup-form">
       <div class="form-group">
         <label for="username">
         <input placeholder="username" class="form-input" type="text" id="username" />
