--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -13,7 +13,8 @@
         <input placeholder="password" class="form-input" type="password" id="password" />
       </div>
       <div class="form-group">
-        <a href="/dashboard" class="btn btn-primary" type="submit-form">sign up</a>
+        <button class="btn btn-primary" type="submit-form">sign up</button>
+        {{!-- <a href="/dashboard" class="btn btn-primary" type="submit-form">sign up</a> --}}
       </div>
     </form>
   </div>
